--- a/index.html
+++ b/index.html
@@ -156,12 +156,8 @@
                             <span>PostgreSQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i> Code
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
+                            <a href="#" class="project-link">Code</a>
+                            <a href="#" class="project-link">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -181,12 +177,8 @@
                             <span>Socket.io</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i> Code
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
+                            <a href="#" class="project-link">Code</a>
+                            <a href="#" class="project-link">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -206,12 +198,8 @@
                             <span>D3.js</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i> Code
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
+                            <a href="#" class="project-link">Code</a>
+                            <a href="#" class="project-link">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -242,18 +230,10 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="social-link">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-instagram"></i>
-                        </a>
+                        <a href="#" class="social-link">Github</a>
+                        <a href="#" class="social-link">Linkedin</a>
+                        <a href="#" class="social-link">Twitter</a>
+                        <a href="#" class="social-link">Instagram</a>
                     </div>
                 </div>
                 <form class="contact-form">
@@ -285,3 +265,14 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const toggle = document.querySelector('.hamburger');
+    const body = document.body;
+
+    toggle.addEventListener('click', function() {
+        body.classList.toggle('dark-mode');
+    });
+});
+</script>
