--- a/index.html
+++ b/index.html
@@ -4,88 +4,222 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.29.0/dist/tailwind.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 dark:bg-gray-800 text-gray-900 dark:text-white transition-all duration-300">
-    <!-- Navbar -->
-    <nav class="navbar bg-blue-500 py-2 px-4 mx-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/2 text-white font-bold">
-        <div class="container flex items-center justify-between">
-            <a href="#home" class="text-xl">Your Name</a>
-            <ul class="flex space-x-6">
-                <li><a href="#home" class="hover:text-gray-500">Home</a></li>
-                <li><a href="#about" class="hover:text-gray-500">About</a></li>
-                <li><a href="#projects" class="hover:text-gray-500">Projects</a></li>
-                <li><a href="#skills" class="hover:text-gray-500">Skills</a></li>
-                <li><a href="#contact" class="hover:text-gray-500">Contact</a></li>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <a href="#home">YN</a>
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#home" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#work" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero bg-white py-16 px-4 mx-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/2">
-        <div class="container flex items-center justify-center h-screen">
-            <div class="text-center space-y-8">
-                <h1 class="text-5xl font-bold">Welcome to Your Name</h1>
-                <p class="text-lg text-gray-600">Full Stack Developer & Problem Solver</p>
-                <a href="#about" class="btn btn-blue hover:bg-blue-700 text-white py-2 px-4 rounded-full">Learn More</a>
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Your Name</h1>
+                <p class="hero-subtitle">Full Stack Developer</p>
+                <p class="hero-description">I craft digital experiences with clean code and thoughtful design</p>
+                <div class="hero-buttons">
+                    <a href="#work" class="btn btn-primary">View Work</a>
+                    <a href="#contact" class="btn btn-secondary">Get in Touch</a>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="bg-gray-100 py-16 px-4 mx-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/2">
-        <div class="container flex items-center justify-center h-screen">
-            <div class="text-center space-y-8">
-                <h1>About Me</h1>
-                <p>I'm a passionate developer with experience in creating web applications using modern technologies. I love solving complex problems and turning ideas into reality through code.</p>
-                <p>When I'm not coding, you can find me exploring new technologies, contributing to open source projects, or enjoying outdoor activities.</p>
+    <section id="about" class="about">
+        <div class="container">
+            <div class="section-header">
+                <h2>About</h2>
+            </div>
+            <div class="about-content">
+                <div class="about-text">
+                    <p class="lead">I'm a passionate developer focused on creating meaningful digital experiences through clean, efficient code and user-centered design.</p>
+                    <p>With expertise in modern web technologies, I help businesses and individuals bring their ideas to life through thoughtful development and attention to detail.</p>
+                </div>
+                <div class="skills-list">
+                    <div class="skill-group">
+                        <h4>Frontend</h4>
+                        <ul>
+                            <li>React</li>
+                            <li>TypeScript</li>
+                            <li>Next.js</li>
+                            <li>Tailwind CSS</li>
+                        </ul>
+                    </div>
+                    <div class="skill-group">
+                        <h4>Backend</h4>
+                        <ul>
+                            <li>Node.js</li>
+                            <li>Python</li>
+                            <li>PostgreSQL</li>
+                            <li>MongoDB</li>
+                        </ul>
+                    </div>
+                    <div class="skill-group">
+                        <h4>Tools</h4>
+                        <ul>
+                            <li>Git</li>
+                            <li>Docker</li>
+                            <li>AWS</li>
+                            <li>Figma</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="bg-gray-100 py-16 px-4 mx-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/2">
-        <div class="container flex items-center justify-center h-screen">
-            <div class="text-center space-y-8">
-                <h1>Featured Projects</h1>
-                <ul class="grid grid-cols-2 gap-4 md:grid-cols-4 lg:grid-cols-6">
-                    <li class="bg-gray-300 rounded-lg shadow-md hover:bg-blue-500 transition-all duration-300 p-4 flex items-center justify-between">
-                        <img src="project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
-                        <div class="text-center">
-                            <h2>Project 1</h2>
-                            <p>Description of Project 1</p>
+    <!-- Work Section -->
+    <section id="work" class="work">
+        <div class="container">
+            <div class="section-header">
+                <h2>Selected Work</h2>
+            </div>
+            <div class="projects-grid">
+                <article class="project-card">
+                    <div class="project-info">
+                        <h3>E-Commerce Platform</h3>
+                        <p>A modern e-commerce solution built with React and Node.js, featuring seamless user experience and robust backend architecture.</p>
+                        <div class="project-tech">
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>PostgreSQL</span>
                         </div>
-                    </li>
-                    <!-- Add more project cards as needed -->
-                </ul>
+                        <div class="project-links">
+                            <a href="#" class="project-link">
+                                <i class="fab fa-github"></i>
+                                <span>Code</span>
+                            </a>
+                            <a href="#" class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                <span>Live</span>
+                            </a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-info">
+                        <h3>Task Management App</h3>
+                        <p>A collaborative task management application with real-time updates and intuitive drag-and-drop functionality.</p>
+                        <div class="project-tech">
+                            <span>Vue.js</span>
+                            <span>Socket.io</span>
+                            <span>MongoDB</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">
+                                <i class="fab fa-github"></i>
+                                <span>Code</span>
+                            </a>
+                            <a href="#" class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                <span>Live</span>
+                            </a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-info">
+                        <h3>Analytics Dashboard</h3>
+                        <p>An interactive data visualization dashboard providing real-time insights with clean, accessible design.</p>
+                        <div class="project-tech">
+                            <span>Python</span>
+                            <span>Flask</span>
+                            <span>D3.js</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">
+                                <i class="fab fa-github"></i>
+                                <span>Code</span>
+                            </a>
+                            <a href="#" class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                <span>Live</span>
+                            </a>
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="bg-gray-100 py-16 px-4 mx-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/2">
-        <div class="container flex items-center justify-center h-screen">
-            <div class="text-center space-y-8">
-                <h1>Contact Me</h1>
-                <form class="space-y-6">
-                    <label for="name" class="block text-sm font-medium">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Your Name" required class="w-full p-2 rounded border border-gray-300 focus:border-blue-500 hover:bg-gray-100">
-                    <label for="email" class="block text-sm font-medium">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Your Email" required class="w-full p-2 rounded border border-gray-300 focus:border-blue-500 hover:bg-gray-100">
-                    <label for="subject" class="block text-sm font-medium">Subject</label>
-                    <input type="text" id="subject" name="subject" placeholder="Subject" required class="w-full p-2 rounded border border-gray-300 focus:border-blue-500 hover:bg-gray-100">
-                    <label for="message" class="block text-sm font-medium">Message</label>
-                    <textarea id="message" name="message" rows="4" required class="w-full p-2 rounded border border-gray-300 focus:border-blue-500 hover:bg-gray-100"></textarea>
-                    <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-full hover:bg-blue-700 transition-all duration-300">Send Message</button>
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="section-header">
+                <h2>Get in Touch</h2>
+            </div>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <p class="contact-lead">Let's work together to bring your ideas to life.</p>
+                    <div class="contact-methods">
+                        <a href="mailto:your.email@example.com" class="contact-method">
+                            <i class="fas fa-envelope"></i>
+                            <span>your.email@example.com</span>
+                        </a>
+                        <a href="https://linkedin.com/in/yourprofile" class="contact-method">
+                            <i class="fab fa-linkedin"></i>
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="https://github.com/yourusername" class="contact-method">
+                            <i class="fab fa-github"></i>
+                            <span>GitHub</span>
+                        </a>
+                    </div>
+                </div>
+                <form class="contact-form">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <input type="text" id="name" name="name" placeholder="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" id="email" name="email" placeholder="Email" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="subject" name="subject" placeholder="Subject" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea id="message" name="message" placeholder="Message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-100 py-8 px-4 mx-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/2">
-        <div class="container flex items-center justify-center">
+    <footer class="footer">
+        <div class="container">
             <p>&copy; 2024 Your Name. All rights reserved.</p>
         </div>
     </footer>
