--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Your Name</h1>
-                <p class="hero-subtitle">Full Stack Developer</p>
-                <p class="hero-description">I craft digital experiences with clean code and thoughtful design</p>
+                <p class="hero-subtitle">Network Engineer</p>
+                <p class="hero-description">I design logical networks and ensure seamless connectivity.</p>
                 <div class="hero-buttons">
                     <a href="#work" class="btn btn-primary">View Work</a>
                     <a href="#contact" class="btn btn-secondary">Get in Touch</a>
