--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home">YN</a>
+                <a href="#home">MKa>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -41,9 +41,9 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Your Name</h1>
+                <h1>Muntasir Khan</h1>
                 <p class="hero-subtitle">Network Engineer</p>
-                <p class="hero-description">I design logical networks and ensure seamless connectivity.</p>
+                <p class="hero-description">I design logical networks and </p>
                 <div class="hero-buttons">
                     <a href="#work" class="btn btn-primary">View Work</a>
                     <a href="#contact" class="btn btn-secondary">Get in Touch</a>
