--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="contact-methods">
                         <a href="mailto:your.email@example.com" class="contact-method">
                             <i class="fas fa-envelope"></i>
-                            <span>your.email@example.com</span>
+                            <span>muntasirmkhan@hotmail.com</span>
                         </a>
                         <a href="https://linkedin.com/in/yourprofile" class="contact-method">
                             <i class="fab fa-linkedin"></i>
