--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Muntasir. All rights reserved.</p>
         </div>
     </footer>
 
