--- a/index.html
+++ b/index.html
@@ -12,43 +12,32 @@
     <!-- Navigation Instructions -->
     <div class="nav-instructions">
         <div class="instruction-line">
-            <span class="cmd-prompt">$</span>
-            <span class="cmd-text">navigate --help</span>
+            <span class="cmd-prompt">→</span>
+            <span class="cmd-text">Navigation Guide</span>
         </div>
         <div class="instruction-line">
-            <span class="cmd-output">SCROLL | CLICK | EXPLORE</span>
+            <span class="cmd-output">Scroll • Click • Explore</span>
         </div>
     </div>
-
-    <!-- Glitch Overlay -->
-    <div class="glitch-overlay"></div>
 
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="glitch-text" data-text="MK.SYS">MK.SYS</span>
+                <span>Muntasir Khan</span>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#home" class="nav-link">
-                        <span class="nav-bracket">[</span>HOME<span class="nav-bracket">]</span>
-                    </a>
+                    <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">
-                        <span class="nav-bracket">[</span>ABOUT<span class="nav-bracket">]</span>
-                    </a>
+                    <a href="#about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#work" class="nav-link">
-                        <span class="nav-bracket">[</span>WORK<span class="nav-bracket">]</span>
-                    </a>
+                    <a href="#work" class="nav-link">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#contact" class="nav-link">
-                        <span class="nav-bracket">[</span>CONTACT<span class="nav-bracket">]</span>
-                    </a>
+                    <a href="#contact" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -63,19 +52,16 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="glitch-text" data-text="MUNTASIR KHAN">MUNTASIR KHAN</h1>
-                <p class="hero-subtitle">
-                    <span class="typing-text">NETWORK_ENGINEER.EXE</span>
-                    <span class="cursor">|</span>
-                </p>
-                <p class="hero-description">Architecting digital infrastructures and logical networks</p>
+                <h1>Muntasir Khan</h1>
+                <p class="hero-subtitle">Network Engineer</p>
+                <p class="hero-description">Architecting digital infrastructures and logical networks with precision and innovation</p>
                 <div class="hero-buttons">
                     <a href="#work" class="btn btn-primary">
-                        <span class="btn-text">./view_work.sh</span>
+                        <span class="btn-text">View My Work</span>
                         <span class="btn-glow"></span>
                     </a>
                     <a href="#contact" class="btn btn-secondary">
-                        <span class="btn-text">./connect.sh</span>
+                        <span class="btn-text">Get In Touch</span>
                         <span class="btn-glow"></span>
                     </a>
                 </div>
@@ -179,7 +165,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2 class="glitch-text" data-text="SYSTEM.INFO">SYSTEM.INFO</h2>
+                <h2>About Me</h2>
                 <div class="section-divider"></div>
             </div>
             <div class="about-content">
@@ -224,7 +210,7 @@
     <section id="work" class="work">
         <div class="container">
             <div class="section-header">
-                <h2 class="glitch-text" data-text="PROJECTS.LOG">PROJECTS.LOG</h2>
+                <h2>My Work</h2>
                 <div class="section-divider"></div>
             </div>
             <div class="projects-grid">
@@ -313,7 +299,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
-                <h2 class="glitch-text" data-text="CONNECT.SH">CONNECT.SH</h2>
+                <h2>Contact</h2>
                 <div class="section-divider"></div>
             </div>
             <div class="contact-content">
