--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muntasir Khan - Network Engineer</title>
+    <title>Muntasir Khan</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Instructions -->
     <div class="nav-instructions">
-        <div class="instruction-line">
-            <span class="cmd-text">Navigate • Explore • Connect</span>
-        </div>
+        <span>Navigate • Explore • Connect</span>
     </div>
 
     <!-- Minimal Navigation -->
@@ -47,43 +45,19 @@
     <section id="home" class="hero">
         <div class="cube-container">
             <div class="cube">
-                <div class="cube-face front">
-                    <div class="face-content">
-                        <div class="face-pattern"></div>
-                    </div>
-                </div>
-                <div class="cube-face back">
-                    <div class="face-content">
-                        <div class="face-pattern"></div>
-                    </div>
-                </div>
-                <div class="cube-face right">
-                    <div class="face-content">
-                        <div class="face-pattern"></div>
-                    </div>
-                </div>
-                <div class="cube-face left">
-                    <div class="face-content">
-                        <div class="face-pattern"></div>
-                    </div>
-                </div>
-                <div class="cube-face top">
-                    <div class="face-content">
-                        <div class="face-pattern"></div>
-                    </div>
-                </div>
-                <div class="cube-face bottom">
-                    <div class="face-content">
-                        <div class="face-pattern"></div>
-                    </div>
-                </div>
+                <div class="cube-face front"></div>
+                <div class="cube-face back"></div>
+                <div class="cube-face right"></div>
+                <div class="cube-face left"></div>
+                <div class="cube-face top"></div>
+                <div class="cube-face bottom"></div>
             </div>
         </div>
         
         <div class="hero-content">
             <h1>Muntasir Khan</h1>
-            <p class="hero-subtitle">Network Engineer</p>
-            <p class="hero-description">Architecting digital infrastructures with precision and innovation</p>
+            <p class="hero-subtitle">Infrastructure Specialist</p>
+            <p class="hero-description">Designing and implementing scalable solutions for modern enterprises</p>
         </div>
     </section>
 
@@ -95,35 +69,35 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p class="lead">Specialized in designing robust network infrastructures and implementing scalable solutions for enterprise environments.</p>
-                    <p>With expertise in modern networking technologies, I architect systems that ensure optimal performance, security, and reliability.</p>
+                    <p class="lead">Specialized in designing robust infrastructures and implementing scalable solutions for enterprise environments.</p>
+                    <p>With expertise in modern technologies, I architect systems that ensure optimal performance, security, and reliability across diverse organizational needs.</p>
                 </div>
                 <div class="skills-matrix">
                     <div class="skill-category">
-                        <h4>NETWORKING</h4>
+                        <h4>Infrastructure</h4>
                         <div class="skill-items">
-                            <span class="skill-tag">Cisco</span>
-                            <span class="skill-tag">Juniper</span>
-                            <span class="skill-tag">BGP/OSPF</span>
-                            <span class="skill-tag">MPLS</span>
+                            <span class="skill-tag">Enterprise Solutions</span>
+                            <span class="skill-tag">System Architecture</span>
+                            <span class="skill-tag">Performance Optimization</span>
+                            <span class="skill-tag">Scalability Planning</span>
                         </div>
                     </div>
                     <div class="skill-category">
-                        <h4>SECURITY</h4>
+                        <h4>Security</h4>
                         <div class="skill-items">
-                            <span class="skill-tag">Firewalls</span>
-                            <span class="skill-tag">VPN</span>
-                            <span class="skill-tag">IDS/IPS</span>
-                            <span class="skill-tag">Zero Trust</span>
+                            <span class="skill-tag">Risk Assessment</span>
+                            <span class="skill-tag">Compliance</span>
+                            <span class="skill-tag">Access Control</span>
+                            <span class="skill-tag">Data Protection</span>
                         </div>
                     </div>
                     <div class="skill-category">
-                        <h4>AUTOMATION</h4>
+                        <h4>Management</h4>
                         <div class="skill-items">
-                            <span class="skill-tag">Python</span>
-                            <span class="skill-tag">Ansible</span>
-                            <span class="skill-tag">Terraform</span>
-                            <span class="skill-tag">APIs</span>
+                            <span class="skill-tag">Project Leadership</span>
+                            <span class="skill-tag">Process Improvement</span>
+                            <span class="skill-tag">Team Coordination</span>
+                            <span class="skill-tag">Strategic Planning</span>
                         </div>
                     </div>
                 </div>
@@ -140,16 +114,16 @@
             <div class="projects-grid">
                 <article class="project-card">
                     <div class="project-header">
-                        <h3>Enterprise Network Redesign</h3>
-                        <div class="project-status">DEPLOYED</div>
+                        <h3>Enterprise Infrastructure Redesign</h3>
+                        <div class="project-status">Completed</div>
                     </div>
                     <div class="project-info">
-                        <p>Complete network infrastructure overhaul for 500+ user environment with redundant core, distribution, and access layers.</p>
+                        <p>Complete infrastructure overhaul for 500+ user environment with redundant systems and optimized performance architecture.</p>
                         <div class="project-tech">
-                            <span>Cisco Catalyst</span>
-                            <span>OSPF</span>
-                            <span>HSRP</span>
-                            <span>VLANs</span>
+                            <span>System Architecture</span>
+                            <span>Performance Optimization</span>
+                            <span>Redundancy Planning</span>
+                            <span>Scalability Design</span>
                         </div>
                         <div class="project-metrics">
                             <div class="metric">
@@ -158,7 +132,7 @@
                             </div>
                             <div class="metric">
                                 <span class="metric-value">40%</span>
-                                <span class="metric-label">Latency Reduction</span>
+                                <span class="metric-label">Performance Improvement</span>
                             </div>
                         </div>
                     </div>
@@ -166,16 +140,16 @@
 
                 <article class="project-card">
                     <div class="project-header">
-                        <h3>SD-WAN Implementation</h3>
-                        <div class="project-status">ACTIVE</div>
+                        <h3>Multi-Site Integration</h3>
+                        <div class="project-status">Active</div>
                     </div>
                     <div class="project-info">
-                        <p>Multi-site SD-WAN deployment with centralized policy management and automated failover capabilities.</p>
+                        <p>Comprehensive integration project connecting multiple locations with centralized management and automated processes.</p>
                         <div class="project-tech">
-                            <span>Cisco Viptela</span>
-                            <span>MPLS</span>
-                            <span>Internet</span>
-                            <span>4G LTE</span>
+                            <span>Integration Planning</span>
+                            <span>Process Automation</span>
+                            <span>Centralized Management</span>
+                            <span>Quality Assurance</span>
                         </div>
                         <div class="project-metrics">
                             <div class="metric">
@@ -184,7 +158,7 @@
                             </div>
                             <div class="metric">
                                 <span class="metric-value">60%</span>
-                                <span class="metric-label">Cost Savings</span>
+                                <span class="metric-label">Efficiency Gain</span>
                             </div>
                         </div>
                     </div>
@@ -192,16 +166,16 @@
 
                 <article class="project-card">
                     <div class="project-header">
-                        <h3>Network Automation Suite</h3>
-                        <div class="project-status">BETA</div>
+                        <h3>Process Automation Suite</h3>
+                        <div class="project-status">Development</div>
                     </div>
                     <div class="project-info">
-                        <p>Python-based automation framework for configuration management, monitoring, and incident response.</p>
+                        <p>Comprehensive automation framework for streamlined operations, monitoring, and incident response across enterprise systems.</p>
                         <div class="project-tech">
-                            <span>Python</span>
-                            <span>Netmiko</span>
-                            <span>NAPALM</span>
-                            <span>Grafana</span>
+                            <span>Process Design</span>
+                            <span>Workflow Optimization</span>
+                            <span>Monitoring Systems</span>
+                            <span>Response Automation</span>
                         </div>
                         <div class="project-metrics">
                             <div class="metric">
@@ -210,7 +184,7 @@
                             </div>
                             <div class="metric">
                                 <span class="metric-value">200+</span>
-                                <span class="metric-label">Devices Managed</span>
+                                <span class="metric-label">Systems Managed</span>
                             </div>
                         </div>
                     </div>
@@ -227,7 +201,7 @@
             </div>
             <div class="contact-content">
                 <div class="contact-info">
-                    <p class="contact-lead">Ready to architect your next network solution?</p>
+                    <p class="contact-lead">Ready to discuss your next project?</p>
                     <div class="contact-methods">
                         <a href="mailto:muntasirmkhan@hotmail.com" class="contact-method">
                             <span>muntasirmkhan@hotmail.com</span>
@@ -236,7 +210,7 @@
                             <span>LinkedIn Profile</span>
                         </a>
                         <a href="https://github.com/muntasiir" class="contact-method">
-                            <span>GitHub Repository</span>
+                            <span>Portfolio Repository</span>
                         </a>
                     </div>
                 </div>
@@ -248,10 +222,10 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2025 Muntasir Khan. All systems operational.</p>
+                <p>&copy; 2025 Muntasir Khan. All rights reserved.</p>
                 <div class="system-status">
                     <span class="status-indicator"></span>
-                    <span>ONLINE</span>
+                    <span>Available</span>
                 </div>
             </div>
         </div>
